--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="propaganda">Eu sou uma propaganda e sou um h1</h1>
 
     <div class="fundo-verde p">
-    <p>sou um paragrafo</p>
+    <p>Eus sou um paragrafo</p>
     </div>
     
 </body>
